--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^5.1.0",
     "mediasoup": "^3.19.2",
+    "mkcert": "^3.2.0",
     "socket.io": "^4.8.1"
   }
 }
